--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,8 @@
         "react"
     ],
     "rules": {
+        "react/prop-types": "off",
+        "react/jsx-uses-react": "off",
+        "react/react-in-jsx-scope": "off"
     }
 }
