--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,9 @@
     "target": "es2016",
     "jsx": "preserve",
     "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
   },
   "exclude": [
     "node_modules",
