--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,15 +1,12 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2016",
-    "jsx": "preserve",
-    "baseUrl": "./src",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
-  },
-  "exclude": [
-    "node_modules",
-    "**/node_modules/*"
-  ]
+	"compilerOptions": {
+		"module": "commonjs",
+		"target": "es2016",
+		"jsx": "preserve",
+		"baseUrl": "./src",
+		"paths": {
+			"@/*": ["./src/*"]
+		}
+	},
+	"exclude": ["node_modules", "**/node_modules/*"]
 }
